tests/valid/54394_operator_precedence/operator_precedence.agu
-- Author: 54394, Afonso Esteves

let _ : Int = (-2 + 4 * 3 - 2 ^ 3 + 11) % 5 + 6 / -3

