tests/invalid-syntax/54394_missing_variable/missing_variable.agu
-- Author: 54394, Afonso Esteves


-- ignore float values
let deg_to_rad (ang) : Int -> Int =
    (ang * pi * 2) / 360

